Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-9723

[ntuser] co_IntDrawCaret makes crash system

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.0
    • Win32SS
    • None

    Description

      In the same way as CORE-9715 after starting Mongoose 3.6, then you put the cursor over his icon on systray, then right-click, choose "Edit settings", close the window that appears, and then do a right-click over the same icon again, system will crash with a win32k.sys failure, a backtrace says this:

      Entered debugger on last-chance exception (Exception Code: 0xc0000005) (Page Fault)
      Memory at 0x00000068 could not be read: Page not present.
      kdb:> bt
      Eip:
      <win32k.sys:32498 (win32ss/user/ntuser/caret.c:33 (co_IntDrawCaret))>
      Frames:
      <win32k.sys:32632 (win32ss/user/ntuser/caret.c:140 (co_IntHideCaret))>
      <win32k.sys:329d6 (win32ss/user/ntuser/caret.c:245 (co_UserHideCaret))>
      <win32k.sys:331f4 (win32ss/user/ntuser/caret.c:458 (NtUserHideCaret))>
      <NTOSKRNL.EXE:149e10 (ntoskrnl/include/internal/i386/ke.h:689 (KiSystemServiceHandler))>
      <NTOSKRNL.EXE:3d95 (:0 (KiFastCallEntry))>
      <ntdll.dll:c85d (/mnt/ramdisk/buildbot/output-MinGW-i386/reactos/dll/ntdll/ntdll_stubs.c:31 (EtwNotificationRegistrationA))>
      <user32.dll:5823f (win32ss/user/user32/windows/message.c:1102 (IntCallWindowProcW))>
      <user32.dll:583bb (win32ss/user/user32/windows/message.c:1140 (IntCallWindowProcW))>
      <mongoose.exe:1335>
      <user32.dll:5c138 (win32ss/user/user32/windows/nonclient.c:644 (DefWndNCCalcSize))>
      <user32.dll:5e346 (win32ss/user/user32/windows/prop.c:137 (EnumPropsA))>
      <user32.dll:5e7d4 (win32ss/user/user32/windows/prop.c:298 (EnumPropsW))>
      <mongoose.exe:11ab>
      <mongoose.exe:2e9d5>
      <KERNEL32.DLL:fb90 (dll/win32/kernel32/client/proc.c:1571 (ExitProcess))>
      <00000000>
      kdb:> cont

      clear failure on this line:

      if (pWnd->hrgnUpdate)

      Attachments

        Activity

          People

            jimtabor jimtabor
            Julcar Julcar
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: