[NtUser] - Since this is hiding the cursor, no window, just return. See CORE-9723.

svn path=/trunk/; revision=67856